made some changed and fixed some code to align everything properly + corrected some css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,7 +35,6 @@ button:hover {
 
 .container {
   margin: 0 auto;
-  max-width: 600px;
   overflow: auto;
   text-align: center;
 }
