--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,19 +1,30 @@
+/* span {
+  line-height: 24px;
+  font-size: 20px;
+}
+
+.color_11 {
+  color: gray;
+}
+
 ul {
   display: flex;
   justify-content: space-around;
   list-style-type: none;
-}
-
-li {
-  font-size: 1.25rem;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  text-decoration: none;
 }
 
 .navBar {
-  background: steelblue;
-  box-shadow: 4px 2px 5px;
-  color: white;
-  margin-bottom: 2rem;
-  padding: 1.5rem 2rem;
+  overflow-wrap: break-word;
+  text-align: left;
+  color: rgb(102, 102, 102);
+  line-height: 1.2;
+  letter-spacing: 3px;
+  font-size: 16px;
+  font-family: "Open Sans";
 }
 
 .navBar button {
@@ -43,5 +54,46 @@ img {
 
 .background {
   background-color: purple;
+} */
+
+.navbar {
+  width: 100%;
+  background-color: white;
+}
+
+.navbar a {
+  float: left;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+  width: 30%;
+  text-align: center;
+}
+
+img {
+  display: flex;
+  width: 100%;
+  height: 450px;
+  padding: 5px;
+}
+
+li {
+ float: right;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: none;
+  text-decoration: none;
+  background-color: black;
+}
+
+span {
+  line-height: 24px;
+  font-size: 30px;
 }
 
